[project]
name = "cifar-representations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "notebook[lab]>=7.4.7",
    "numpy>=2.3.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.9",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]
